# digitize

./: README.md  pyproject.toml
digitize/: __init__.py  digit_suffixes.py  discharge.py  language.py
tests/: test_basic.py
