[tool.pdm]

[project]
name = "digitize"
version = "1.2.0"
description = "Open source available library for determining the bit depth of a number with the output of its name."
authors = [
    {name = "LimeGeeg", email = "borovoy06nik@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
